main/default/objects/Trunk_Group__c/Trunk_Group__c.object-meta.xml
<CustomObject>
    <label>Trunk Group</label>
    <nameField>
        <displayFormat>TG-{0000}</displayFormat>
        <label>Trunk Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trunk Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>