main/default/objects/Trunk_Group__c/fields/Auth_Codes__c.field-meta.xml
<CustomField>
    <fullName>Auth_Codes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auth Codes</label>
    <type>Checkbox</type>
</CustomField>