main/default/objects/Trunk_Group__c/fields/In_Out_Signaling__c.field-meta.xml
<CustomField>
    <fullName>In_Out_Signaling__c</fullName>
    <label>In &amp; Out Signaling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loop</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Wink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>