main/default/objects/Trunk_Group__c/fields/of_DNIS_Digits__c.field-meta.xml
<CustomField>
    <fullName>of_DNIS_Digits__c</fullName>
    <label># of DNIS Digits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>