main/default/objects/Trunk_Group__c/fields/Phone_Number_Assignment_or_DID_Range__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Assignment_or_DID_Range__c</fullName>
    <label>Phone Number Assignment or DID Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>