main/default/objects/Trunk_Group__c/fields/Ported_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Ported_Numbers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ported Numbers</label>
    <type>Checkbox</type>
</CustomField>