main/default/objects/Trunk_Group__c/fields/Trunk_Group__c.field-meta.xml
<CustomField>
    <fullName>Trunk_Group__c</fullName>
    <label>Trunk Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>